--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ header h1 {
   font-size: 48px;
 }
 
+/*-------------------------------------------------------------*/
+                        /* MAIN */
+/*-------------------------------------------------------------*/
+
 #error {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
