--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,13 @@ header h1 {
 #show-more {
   display: none;
 }
+
+/*-------------------------------------------------------------*/
+                        /* FOOTER */
+/*-------------------------------------------------------------*/
+
+footer {
+  width: 100%;
+  margin-top: 700px;
+  text-align: center;
+}
